use this consistently in template

--- a/ui/app/templates/components/namespace-link.hbs
+++ b/ui/app/templates/components/namespace-link.hbs
@@ -1,5 +1,5 @@
 <LinkTo
-  @params={{array "vault.cluster.secrets" (query-params namespace=normalizedNamespace)}}
+  @params={{array "vault.cluster.secrets" (query-params namespace=this.normalizedNamespace)}}
   class={{concat "is-block " class}}
   data-test-namespace-link={{this.normalizedNamespace}}
   >
